Add membar to recents options [2/2]
Change-Id: I6c2f6b86e479b4f245ba1e33ec6ce377abe414b7

--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -1284,4 +1284,8 @@
 
     <!-- SIM status format string -->
     <string name="sim_status_format_string">Voice: <xliff:g id="voice_status">%1$s</xliff:g> / Data: <xliff:g id="data_status">%2$s</xliff:g></string>
+
+    <!-- Recents Membar -->
+    <string name="systemui_recents_mem_display_title">Show Memory Bar</string>
+    <string name="systemui_recents_mem_display_summary">Enable Disable Ram bar in recent app view</strin
 </resources>
