--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -1287,5 +1287,6 @@
 
     <!-- Recents Membar -->
     <string name="systemui_recents_mem_display_title">Show Memory Bar</string>
-    <string name="systemui_recents_mem_display_summary">Enable Disable Ram bar in recent app view</strin
+    <string name="systemui_recents_mem_display_summary">Enable Disable Ram bar in recent app view</string>
+
 </resources>
