--- a/res/xml/display.xml
+++ b/res/xml/display.xml
@@ -52,13 +52,6 @@
                 android:title="@string/display_rotation_title"
                 android:fragment="com.android.settings.cyanogenmod.DisplayRotation"/>
 
-        <!-- Memory Bar in recent -->
-        <SwitchPreference
-               android:key="systemui_recents_mem_display"
-               android:title="@string/systemui_recents_mem_display_title"
-               android:summary="@string/systemui_recents_mem_display_summary"
-               android:defaultValue="false" />
-
         <!-- Doze // Ambient display -->
         <SwitchPreference
                 android:key="doze"
@@ -164,6 +157,13 @@
                 settings:keywords="@string/keywords_display_font_size"
                 android:summary="@string/summary_font_size"
                 android:dialogTitle="@string/dialog_title_font_size" />
+
+        <!-- Memory Bar in recent -->
+        <SwitchPreference
+               android:key="systemui_recents_mem_display"
+               android:title="@string/systemui_recents_mem_display_title"
+               android:summary="@string/systemui_recents_mem_display_summary"
+               android:defaultValue="true" />
 
         <!-- Search in Recents -->
         <com.android.settings.cyanogenmod.CMSystemSettingSwitchPreference
